k8s/mediamanager/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mediamanager-ingressroute
  namespace: mediamanager
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mediamanager.home.coredev.uk`)
      kind: Rule
      services:
        - name: mediamanager
          port: 8000
  tls:
    secretName: mediamanager-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mediamanager-redirect
  namespace: mediamanager
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mediamanager.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: mediamanager
          port: 8000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: mediamanager
spec:
  redirectScheme:
    scheme: https
    permanent: true
